--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,37 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply plugin: 'com.android.application'
 
-buildscript {
-    
-    repositories {
-        google()
-        jcenter()
-		    mavenCentral()
-        
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.2'
-        
+android {
+		compileSdkVersion 26
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+		defaultConfig {
+				applicationId "com.bacter.karatechop"
+				minSdkVersion 21
+				// noinspection OldTargetApi
+				targetSdkVersion 26
+				versionCode 1
+				versionName "1.0"
+
+				testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+		}
+
+		buildTypes {
+				release {
+						minifyEnabled false
+						proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+				}
+		}
+
 }
 
-allprojects {
-    repositories {
-        google()
-        jcenter()
-		    mavenCentral()
-		    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
-        
-    }
-}
+dependencies {
+		implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+		implementation 'androidx.appcompat:appcompat:1.1.0'
+		implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+		testImplementation 'junit:junit:4.13'
+		androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+		androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+		//noinspection GradleCompatible
+		implementation 'com.android.support:appcompat-v7:26.1.0'
+		implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
 }
